--- a/components/ssBribeCreate/ssBribeCreate.module.css
+++ b/components/ssBribeCreate/ssBribeCreate.module.css
@@ -300,7 +300,7 @@
   cursor: pointer;
   padding: 6px;
   font-size: 30px !important;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   margin: 4px;
   border-radius: 6px;
 }
@@ -315,7 +315,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .massiveInputAssetSelect {
@@ -337,7 +337,7 @@
 .displayAssetIconSmall {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 30px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   padding: 6px;
 }
 
@@ -366,7 +366,7 @@
 .displayAssetIcon {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -379,7 +379,7 @@
   position: absolute;
   left: 0px;
   top: 10px;
-  border: 5px solid #212b48;
+  border: 5px solid rgb(5, 9, 20);
   border-radius: 100px;
 }
 .img2Logo {
@@ -387,7 +387,7 @@
   left: 60px;
   z-index: 1;
   top: 10px;
-  border: 5px solid #212b48;
+  border: 5px solid rgb(5, 9, 20);
   border-radius: 100px;
 }
 .doubleImages {
@@ -409,7 +409,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .mediumInputAssetSelect {
@@ -441,7 +441,7 @@
 .mediumdisplayAssetIcon {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 50px;
   height: 50px;
   padding: 5px;
@@ -543,7 +543,7 @@
   align-items: center;
   justify-content: center;
   background: none;
-  border: 1px solid #212B48;
+  border: 1px solid rgb(5, 9, 20);
   border-radius: 10px;
   width: calc(100% - 52px);
   margin: 25px 25px 0px 25px;
@@ -573,7 +573,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .mediumInputAssetSelect {
@@ -605,7 +605,7 @@
 .mediumdisplayAssetIcon {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 50px;
   height: 50px;
   padding: 5px;
