--- a/components/ssLiquidityCreate/ssLiquidityCreate.module.css
+++ b/components/ssLiquidityCreate/ssLiquidityCreate.module.css
@@ -300,7 +300,7 @@
   cursor: pointer;
   padding: 6px;
   font-size: 30px !important;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   margin: 4px;
   border-radius: 6px;
 }
@@ -315,7 +315,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .massiveInputAssetSelect {
@@ -337,7 +337,7 @@
 .displayAssetIconSmall {
   border: 1px solid rgba(126, 153, 153, 0.5);
   border-radius: 30px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   padding: 6px;
 }
 
@@ -366,7 +366,7 @@
 .displayAssetIcon {
   border: 1px solid rgba(126, 153, 176, 0.3);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -378,7 +378,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .mediumInputAssetSelect {
@@ -410,7 +410,7 @@
 .mediumdisplayAssetIcon {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 50px;
   height: 50px;
   padding: 5px;
@@ -509,7 +509,7 @@
   align-items: center;
   justify-content: center;
   background: none;
-  border: 1px solid #212B48;
+  border: 1px solid rgb(5, 9, 20);
   border-radius: 10px;
   width: calc(100% - 50px);
   margin: 20px 25px 0 25px;
@@ -538,7 +538,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .mediumInputAssetSelect {
@@ -570,7 +570,7 @@
 .mediumdisplayAssetIcon {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 50px;
   height: 50px;
   padding: 5px;
