--- a/components/ssVest/ssVest.module.css
+++ b/components/ssVest/ssVest.module.css
@@ -343,7 +343,7 @@
   border-radius: 10px;
   width: 100%;
   align-items: center;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
 }
 
 .massiveInputAssetSelect {
@@ -376,7 +376,7 @@
 .displayAssetIcon {
   border: 1px solid rgba(126, 153, 176, 0.2);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -385,7 +385,7 @@
 .displayAssetIconWhite {
   border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 50px;
-  background: rgb(33, 43, 72);
+  background: rgb(15, 22, 44);
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -444,7 +444,7 @@
   align-items: center;
   justify-content: center;
   background: none;
-  border: 1px solid #212B48;
+  border: 1px solid rgb(5, 9, 20);
   border-radius: 10px;
   width: calc(100% - 0px);
   margin: 0px 0px 15px 0px;
